update swagger & add ping api
